# pythology

./: .env  .gitignore  README.md  compose.yaml
pythos/atlas/: .env  (+3 more)
pythos/augur/: .dockerignore  .gitignore  Dockerfile  README.md  dev-requirements.txt  manage.py  pyproject.toml  requirements.txt
pythos/augur/archive_finder/: admin.py  api.py  apps.py  factories.py  models.py  schema.py  utils.py
pythos/augur/archive_finder/migrations/: 0001_initial.py  0002_archiveorder.py  0003_remove_archivefinder_imagery_request_and_more.py  0004_remove_archiveresult_product_type_and_more.py  0005_remove_archiveresult_provider_and_more.py  0006_archiveresult_thumbnail.py  0007_archivefinder_name.py  0008_remove_archiveresult_archive_finder_archivelookup_and_more.py  0009_remove_archivelookup_archive_items_and_more.py  0010_archiveitem_remove_archiveresult_archive_lookup_and_more.py  0011_imagerylookupstudy_imagerylookupresult.py  0012_remove_imagerylookupresult_imagery_lookup_study_and_more.py
pythos/augur/archive_finder/studies/: scholar.py
pythos/augur/augur/: api.py  asgi.py  settings.py  urls.py  wsgi.py
pythos/augur/augury/: admin.py  api.py  apps.py  models.py  schema.py
pythos/augur/augury/migrations/: 0001_initial.py  (+2 more)
pythos/augur/core/: admin.py  api.py  factories.py  models.py  schema.py
pythos/augur/feasibility_finder/: admin.py  api.py  apps.py  factories.py  models.py  schema.py
pythos/augur/provider/: admin.py  api.py  factories.py  models.py  schema.py
pythos/dreamflow/: .dockerignore  .gitignore  Dockerfile  README.md  airflow.cfg  dev-requirements.txt  pyproject.toml  requirements.txt  standalone_admin_password.txt
pythos/dreamflow/config/: airflow.cfg
pythos/dreamflow/dags/: generate_archive_finder_results.py  imagery_finder_dag.py  import_archive_items_dag.py  process_archive_finder_dag.py
(+43 files in other folders)
