[project]
name = "dreamflow"
version = "0.1.0"
description = "Airflow Based Scheduler/Workflow/Task Orchestrater"
authors = [
    {name = "eric rodefeld",email = "eric.d.rodefeld@gmail.com"},
]
dependencies = [
    "apache-airflow==2.10.2",
    "psycopg2-binary==2.9.10",
    "apache-airflow-providers-celery==3.8.3",
    "apache-airflow-providers-common-sql==1.18.0",
    "apache-airflow-providers-postgres==5.13.1",
    "apache-airflow-providers-redis==3.8.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
py-modules = []
